--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
 
 *{
   font-family: "Montserrat", sans-serif !important;
-
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+.App{
+  padding:30px
 }
 
 html {
